fix: Show binned days remaining in NoteItem footer & add localization

--- a/app/src/main/res/values-hi/bin_strings.xml
+++ b/app/src/main/res/values-hi/bin_strings.xml
@@ -12,6 +12,7 @@
 
     <string name="x_selected">%1$d चयनित</string>
     <string name="clear_selection">चयन साफ़ करें</string>
+    <string name="days_left">%1$d दिन शेष</string>
 
 
 </resources>
