Update team role in About screen

--- a/app/src/main/res/values/common_strings.xml
+++ b/app/src/main/res/values/common_strings.xml
@@ -142,7 +142,7 @@
     <string name="about_the_app_description">NoteNext helps you organize your thoughts, ideas, and daily tasks in a simple and intuitive way. Create notes, checklists, and set reminders to stay on top of your schedule.</string>
     <string name="meet_the_team">Meet the Team</string>
     <string name="core_developer">Core Developer</string>
-    <string name="developer">Developer</string>
+    <string name="feedback_provider">Feedback &amp; Testing</string>
     <string name="made_with_love">Made with ❤️ for better note-taking</string>
     <string name="backup_information">Backup Information</string>
     <string name="notes_count">Notes</string>
